# music

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: app.rs  audio.rs  daemon.rs  graphics.rs  ipc.rs  main.rs  remote.rs  tray.rs  ui.rs
