[package]
name = "music"
version = "0.2.0"
edition = "2024"
description = "A minimal ratatui music player focused on one album at a time, with mouse controls and Kitty album art."
readme = "README.md"
license = "MIT"
keywords = ["music", "tui", "ratatui", "audio", "kitty"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://github.com/ellierocks/music"
homepage = "https://github.com/ellierocks/music"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
image = "0.25"
rand = { version = "0.8", features = ["small_rng"] }
ratatui = "0.29"
rodio = "0.20"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
